WindGroup Dev/src/objects/Lease__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Term__c</fullName>
        <label>Billing Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>Type of business</description>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>F&amp;B</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Change_Lease_Start_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Lease Start Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Method__c</fullName>
        <label>Charge Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <description>This field is created to be used in Workflow which auto generate Lease Agreement Name, as we want to flash month value</description>
        <formula>CASE(MONTH(DATEVALUE (CreatedDate )),
1, &quot;01&quot;,
2, &quot;02&quot;,
3, &quot;03&quot;, 
4, &quot;04&quot;, 
5, &quot;05&quot;, 
6, &quot;06&quot;,
7, &quot;07&quot;,
8, &quot;08&quot;,
9, &quot;09&quot;,
10, &quot;10&quot;,
11, &quot;11&quot;,
12, &quot;12&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Year__c</fullName>
        <description>This field is created to be used in Workflow which auto generate Lease Agreement Name, as we want to flash YYYY value</description>
        <formula>TEXT (YEAR( DATEVALUE( CreatedDate ) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day_s_in_expired__c</fullName>
        <formula>(Lease_End_Date__c - TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day(s) in expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deposit_Fixed_Amount__c</fullName>
        <label>Deposit Fixed Amount (Need to delete)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit_Pdf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposit Pdf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Term__c</fullName>
        <label>Deposit Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leases (Financial Contact)</relationshipLabel>
        <relationshipName>Leases_Financial_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fit_Out_Period_Days__c</fullName>
        <label>Fit-Out Period (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fit_Out_Period_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fit-Out Period (Months)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fit_Out_Start_Date__c</fullName>
        <formula>IF(AND(OR(ISBLANK(Fit_Out_Period_Months__c ), Fit_Out_Period_Months__c =0), OR(ISBLANK(TEXT(Fit_Out_Period_Days__c)),ISPICKVAL(Fit_Out_Period_Days__c,&quot;0&quot;))) ,NULL, 
(DATE( 
YEAR( Lease_Start_Date__c ) + FLOOR( ( MONTH ( Lease_Start_Date__c ) - Fit_Out_Period_Months__c - 1 ) / 12), 

if(CASE(MOD(MONTH( Lease_Start_Date__c ) - Fit_Out_Period_Months__c, 12 ), 0, 12, MOD(MONTH(Lease_Start_Date__c)- Fit_Out_Period_Months__c, 12 )) &lt; 0, -1 * CASE(MOD(MONTH( Lease_Start_Date__c ) - Fit_Out_Period_Months__c, 12 ), 0, 12, MOD(MONTH(Lease_Start_Date__c)- Fit_Out_Period_Months__c, 12 )),CASE(MOD(MONTH( Lease_Start_Date__c ) - Fit_Out_Period_Months__c, 12 ), 0, 12, MOD(MONTH(Lease_Start_Date__c)- Fit_Out_Period_Months__c, 12 ))) 

, 
IF( DAY( Lease_Start_Date__c ) &gt; CASE( MOD( MONTH( Lease_Start_Date__c) - Fit_Out_Period_Months__c - 1, 12 ) + 1, 
2, 28, 
4, 30, 
6, 30, 
9, 30, 
11, 30, 
31 ), 
1, DAY( Lease_Start_Date__c ) 
)) 
- IF(ISBLANK(TEXT(Fit_Out_Period_Days__c)),0,+ VALUE(TEXT(Fit_Out_Period_Days__c))) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fit-Out Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GTO_Billed__c</fullName>
        <inlineHelpText>By Lease (Summary) - only one POS tranx for all units and only one invoice line. 
By Lease (Lease Unit) - only one POS tranx for all units and one invoice line for each lease unit. 
By Lease Unit - one POS tranx and one invoice line for each lease units</inlineHelpText>
        <label>GTO Billed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Lease (Summary)</fullName>
                </value>
                <value>
                    <fullName>By Lease (Lease Unit)</fullName>
                </value>
                <value>
                    <fullName>By Lease Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generated_LA_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generated LA PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handover_Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handover Client Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Tenant__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leases</relationshipLabel>
        <relationshipName>Leases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handover_Operation_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Handover Operation In Charge</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leases (Handover Operation In Charge)</relationshipLabel>
        <relationshipName>Leases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOI_Signed_off_Date__c</fullName>
        <label>LOI Signed-off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LOI</label>
        <referenceTo>LOI__c</referenceTo>
        <relationshipLabel>Leases</relationshipLabel>
        <relationshipName>Leases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Late_Payment_Interest__c</fullName>
        <label>Late Payment Interest (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lease_Auto__c</fullName>
        <displayFormat>LA-{MM}{YYYY}-{00000000}</displayFormat>
        <inlineHelpText>This is used in W/F to generate Lease Agreement No.</inlineHelpText>
        <label>Lease Auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lease_End_Date__c</fullName>
        <formula>IF(ISBLANK(TEXT(Lease_Tenure_Days__c)),0,+ VALUE(TEXT(Lease_Tenure_Days__c))) 
+ 
(DATE( 
YEAR( Lease_Start_Date__c ) + FLOOR( ( MONTH ( Lease_Start_Date__c ) + Lease_Tenure_Mths__c - 1 ) / 12 ), 
MOD( MONTH ( Lease_Start_Date__c ) + Lease_Tenure_Mths__c - 1 + 
IF( DAY ( Lease_Start_Date__c ) &gt; CASE( MOD( MONTH( Lease_Start_Date__c ) + Lease_Tenure_Mths__c - 1, 12 ) + 1, 
2, 28, 
4, 30, 
6, 30, 
9, 30, 
11, 30, 
31 ), 1, 0 ), 12 ) + 1, 
IF( DAY( Lease_Start_Date__c ) &gt; CASE( MOD( MONTH( Lease_Start_Date__c) + Lease_Tenure_Mths__c - 1, 12 ) + 1, 
2, 28, 
4, 30, 
6, 30, 
9, 30, 
11, 30, 
31 ), 
1, DAY( Lease_Start_Date__c ) 
) 
)-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Index__c</fullName>
        <label>Lease Index</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Signed_Date__c</fullName>
        <label>Lease Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Start_Date__c</fullName>
        <label>Lease Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Status__c</fullName>
        <description>Status of the Lease 
New = New sign-up 
Cancelled = Lease is cancelled
Renewed = Lease is renewed 
Expired = Lease has expired with no renewal</description>
        <label>Lease Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Renewed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Pre-Terminated</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Tenure_Days__c</fullName>
        <label>Lease Tenure (Days)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Day</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Tenure_Mths__c</fullName>
        <label>Lease Tenure (Mths)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opening_Date__c</fullName>
        <formula>Property__r.Actual_Opening_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Option_to_Renew__c</fullName>
        <description>Option to renew in number of years</description>
        <label>Option to Renew (Mths)</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_End_Date__c</fullName>
        <inlineHelpText>This field would be populated only in the case of Extension or Pre-Termination and would show the Revised End Date as per Extension or Pre-Termination.</inlineHelpText>
        <label>Revised End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permitted_Use__c</fullName>
        <label>Permitted Use</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Terminated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pre-Terminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Precedent_Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please define old Lease ID via which this Lease is created</inlineHelpText>
        <label>Precedent Lease</label>
        <referenceTo>Lease__c</referenceTo>
        <relationshipLabel>Renewed Lease</relationshipLabel>
        <relationshipName>Leases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Factor__c</fullName>
        <inlineHelpText>Populated via LOI
Applicable for CL Process</inlineHelpText>
        <label>Price Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Id__c</fullName>
        <formula>Property__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <description>This field is populated by W/F rule.</description>
        <inlineHelpText>This field is populated by W/F rule.</inlineHelpText>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <formula>Property__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Short_Code__c</fullName>
        <formula>Property__r.Short_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Short Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Leases</relationshipLabel>
        <relationshipName>Leases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Termination__c</fullName>
        <label>Reason for Termination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renovation_Rebates_Terms__c</fullName>
        <label>Renovation Rebates Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Renovation_Rebates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renovation Rebates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rent_Free_End_Date__c</fullName>
        <label>Rent Free End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Free_Start_Date__c</fullName>
        <label>Rent Free Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Roll__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rent Roll</label>
        <referenceTo>Rent_Roll__c</referenceTo>
        <relationshipLabel>Leases</relationshipLabel>
        <relationshipName>Leases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Different stages for Letter of Intent and Lease Agreement</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LOI Draft</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>LOI Approval</fullName>
                </value>
                <value>
                    <fullName>LOI Approved</fullName>
                </value>
                <value>
                    <fullName>LOI Sent</fullName>
                </value>
                <value>
                    <fullName>LOI Signed</fullName>
                </value>
                <value>
                    <fullName>LOI Cancelled</fullName>
                </value>
                <value>
                    <fullName>LA Draft</fullName>
                </value>
                <value>
                    <fullName>LA Sent</fullName>
                </value>
                <value>
                    <fullName>LA Cancelled</fullName>
                </value>
                <value>
                    <fullName>LA Variation</fullName>
                </value>
                <value>
                    <fullName>LA Signed</fullName>
                </value>
                <value>
                    <fullName>LA Approval</fullName>
                </value>
                <value>
                    <fullName>LA Approved</fullName>
                </value>
                <value>
                    <fullName>LA Stamped</fullName>
                </value>
                <value>
                    <fullName>LA Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staggered_Rent__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check for staggered rental</description>
        <label>Staggered Rent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tenant_Id__c</fullName>
        <formula>Tenant__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenant Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Name__c</fullName>
        <formula>Tenant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenant_Type__c</fullName>
        <description>Global Picklist</description>
        <inlineHelpText>Populated via LOI
Applicable for CL Process</inlineHelpText>
        <label>Tenant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tenant_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leases</relationshipLabel>
        <relationshipName>Leases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Terms_Conditions__c</fullName>
        <label>Terms &amp; Conditions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Fitout_Start_Date__c</fullName>
        <formula>IF(AND(OR(ISBLANK(Fit_Out_Period_Months__c ), Fit_Out_Period_Months__c =0), OR(ISBLANK(TEXT(Fit_Out_Period_Days__c)),ISPICKVAL(Fit_Out_Period_Days__c,&quot;0&quot;))) ,NULL, 
(DATE( 
YEAR( Lease_Start_Date__c ) + FLOOR( ( MONTH ( Lease_Start_Date__c ) - Fit_Out_Period_Months__c - 1 ) / 12), 

if(CASE(MOD(MONTH( Lease_Start_Date__c ) - Fit_Out_Period_Months__c, 12 ), 0, 12, MOD(MONTH(Lease_Start_Date__c)- Fit_Out_Period_Months__c, 12 )) &lt; 0, -1 * CASE(MOD(MONTH( Lease_Start_Date__c ) - Fit_Out_Period_Months__c, 12 ), 0, 12, MOD(MONTH(Lease_Start_Date__c)- Fit_Out_Period_Months__c, 12 )),CASE(MOD(MONTH( Lease_Start_Date__c ) - Fit_Out_Period_Months__c, 12 ), 0, 12, MOD(MONTH(Lease_Start_Date__c)- Fit_Out_Period_Months__c, 12 )))

, 
IF( DAY( Lease_Start_Date__c ) &gt; CASE( MOD( MONTH( Lease_Start_Date__c) - Fit_Out_Period_Months__c - 1, 12 ) + 1, 
2, 28, 
4, 30, 
6, 30, 
9, 30, 
11, 30, 
31 ), 
1, DAY( Lease_Start_Date__c ) 
)) 
- IF(ISBLANK(TEXT(Fit_Out_Period_Days__c)),0,+ VALUE(TEXT(Fit_Out_Period_Days__c))) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Fitout Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_formula__c</fullName>
        <formula>if(CASE(MOD(MONTH( Lease_Start_Date__c ) - Fit_Out_Period_Months__c, 12 ), 0, 12, MOD(MONTH(Lease_Start_Date__c)- Fit_Out_Period_Months__c, 12 )) &lt; 0, -1 * CASE(MOD(MONTH( Lease_Start_Date__c ) - Fit_Out_Period_Months__c, 12 ), 0, 12, MOD(MONTH(Lease_Start_Date__c)- Fit_Out_Period_Months__c, 12 )),CASE(MOD(MONTH( Lease_Start_Date__c ) - Fit_Out_Period_Months__c, 12 ), 0, 12, MOD(MONTH(Lease_Start_Date__c)- Fit_Out_Period_Months__c, 12 )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>date formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lease</label>
    <listViews>
        <fullName>AllLease</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Tenant__c</columns>
        <columns>Stage__c</columns>
        <columns>Lease_Status__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Original_End_Date__c</columns>
        <columns>Lease_Tenure_Days__c</columns>
        <columns>Lease_Tenure_Mths__c</columns>
        <columns>Late_Payment_Interest__c</columns>
        <columns>Fit_Out_Period_Months__c</columns>
        <columns>Fit_Out_Period_Days__c</columns>
        <columns>Fit_Out_Start_Date__c</columns>
        <columns>Test_Fitout_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lease__c.LA</value>
        </filters>
        <label>All Lease</label>
    </listViews>
    <listViews>
        <fullName>AllTMLease</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Tenant__c</columns>
        <columns>Stage__c</columns>
        <columns>Lease_Status__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Original_End_Date__c</columns>
        <columns>Lease_Tenure_Days__c</columns>
        <columns>Lease_Tenure_Mths__c</columns>
        <columns>Late_Payment_Interest__c</columns>
        <columns>Fit_Out_Period_Months__c</columns>
        <columns>Fit_Out_Period_Days__c</columns>
        <columns>Fit_Out_Start_Date__c</columns>
        <columns>Test_Fitout_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lease__c.LA</value>
        </filters>
        <filters>
            <field>Property_Short_Code__c</field>
            <operation>equals</operation>
            <value>TM</value>
        </filters>
        <label>All TM Lease</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Tenant__c</columns>
        <columns>Stage__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Lease_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>Search_by_Shop_Name</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Tenant__c</columns>
        <columns>Stage__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Lease_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>View by Shop Name</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Lease Agreement No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leases</pluralLabel>
    <recordTypes>
        <fullName>LA</fullName>
        <active>true</active>
        <description>Lease Agreement Record</description>
        <label>LA</label>
    </recordTypes>
    <recordTypes>
        <fullName>LOI</fullName>
        <active>false</active>
        <description>Letter of Intent Record</description>
        <label>LOI</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>